--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+marvel_public_key = "55a69d7b2992b5cf962b6e450aa7e165"
+marvel_private_key = "d30ec592d68bc00aac26701ab7b4dc3ab40198df"
