--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,12 @@ dependencies {
 
     implementation("androidx.paging:paging-runtime:3.1.1")
 
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
